--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,14 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version> <!-- 最新版本可到Maven仓库查询 -->
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
