--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
             <version>${mybatis.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
     
     <build>
